--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Página Inicial</title>
+  <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Bem-vindo à Página Inicial</h1>
+    <img src="foto.jpg" alt="Foto Exemplo">
+    <a href="aula.html" class="botao">Ir para a Aula</a>
+  </div>
+</body>
+</html>
