--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <div class="container">
     <h1>Bem-vindo à Página Inicial</h1>
-    <img src="foto.jpg" alt="Foto Exemplo">
+    <img src="kidbengala.jpg" alt="trabalho borzurk">
     <a href="aula.html" class="botao">Ir para a Aula</a>
   </div>
 </body>
