--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Bem-vindo à Página Inicial</h1>
-    <img src="kidbengala.jpg" alt="trabalho borzurk">
+    <h1>Mailon Fernando Alves Prestes</h1>
+    <img src="foto.jpg" alt="Foto de Mailon">
     <a href="aula.html" class="botao">Ir para a Aula</a>
   </div>
 </body>
 </html>
+
